2020 KPU 소프트웨어 경진대회 본선 후기

--- a/_posts/2020-10-16-kpu-2020-ps-review.md
+++ b/_posts/2020-10-16-kpu-2020-ps-review.md
@@ -1,4 +1,6 @@
-# 2020 KPU 소프트웨어 경진대회 본선 후기
+---
+title: "2020 KPU 소프트웨어 경진대회 본선 후기"
+---
 
 2020.10.7 - 예선 당일
 
@@ -38,7 +40,7 @@ G를 푸는데, 이상하게 PA가 나왔다. 이때 반쯤 패닉 상태에 빠
 
 C는 그리디를 쓰는 것 같고, F는 TSP-like 문제라고 확신했지만 시간이 없어서 건드리지 못했다.
 
-![2020%20KPU%20%E1%84%89%E1%85%A9%E1%84%91%E1%85%B3%E1%84%90%E1%85%B3%E1%84%8B%E1%85%B0%E1%84%8B%E1%85%A5%20%E1%84%80%E1%85%A7%E1%86%BC%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%83%E1%85%A2%E1%84%92%E1%85%AC%20%E1%84%87%E1%85%A9%E1%86%AB%E1%84%89%E1%85%A5%E1%86%AB%20%E1%84%92%E1%85%AE%E1%84%80%E1%85%B5%200759686aea1e464dbcf8ac35dd1e4540/Untitled.png](2020%20KPU%20%E1%84%89%E1%85%A9%E1%84%91%E1%85%B3%E1%84%90%E1%85%B3%E1%84%8B%E1%85%B0%E1%84%8B%E1%85%A5%20%E1%84%80%E1%85%A7%E1%86%BC%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%83%E1%85%A2%E1%84%92%E1%85%AC%20%E1%84%87%E1%85%A9%E1%86%AB%E1%84%89%E1%85%A5%E1%86%AB%20%E1%84%92%E1%85%AE%E1%84%80%E1%85%B5%200759686aea1e464dbcf8ac35dd1e4540/Untitled.png)
+![Scoreboard](/assets/images/kpu-2020-ps-scoreboard.png)
 
 대회가 거의 끝나갈 때 PA 부분 점수를 잘 제출한 것을 마지막 점수로 조절하고 나서, 그렇게 3등을 하게 된다.
 
