본선 후기 내용 추가

--- a/_posts/2020-10-16-kpu-2020-ps-review.md
+++ b/_posts/2020-10-16-kpu-2020-ps-review.md
@@ -57,4 +57,9 @@ C는 그리디를 쓰는 것 같고, F는 TSP-like 문제라고 확신했지만 
 
 잘 풀린 예선과 심리적, 환경적인 요소로 극한상황에 부딪힌 본선의 대비가 극명하게 드러난 대회였다고 생각한다.
 
+내 방식인 **일단 많은 아이디어와 구현방법으로 많이 제출해보기**가 책상이 없어서 타이핑이 힘드니 안정을 추구하게 되고, 수정해야할 로직도 긴장해서 검증이 안되니 수정을 못하고 많이 막혔던것 같다.
+
 아무튼 마무리 잘 하고 우수상 받고 집에서 쉬니까 좋을 뿐이다. 😄
+
+
+제출 코드는 [여기](https://github.com/dps0340/kpu-oj-2020)에서 볼수 있다.
